# SMQTK-Detection

./: .gitignore  .gitlab-ci.yml  .mypy.ini  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml  readthedocs.yaml
.github/workflows/: ci-unittests.yml  dependency-review.yml
docs/: conf.py  detection_impls.rst  detection_interfaces.rst  index.rst  installation.rst  readthedocs-reqs.txt  release_notes.rst  release_process.rst  sphinx_server.py
docs/release_notes/: pending_release.rst  v0.15.0.rst  v0.16.0.rst  v0.17.0.rst  v0.18.0.rst  v0.18.1.rst  v0.19.0.rst  v0.20.0.rst  v0.20.1.rst  v0.21.0.rst  v0.22.0.rst  v0.23.0.rst
smqtk-detection/: __init__.py  exceptions.py
smqtk-detection/impls/detection_element/: memory.py
smqtk-detection/interfaces/: __init__.py  detection_element.py  object_detector.py
smqtk-detection/utils/: bbox.py
smqtk_detection/: __init__.py  _defaults.py  detection_element_factory.py  exceptions.py
smqtk_detection/impls/detect_image_objects/: centernet.py  mmdet_base.py  random_detector.py  resnet_frcnn.py
smqtk_detection/impls/detection_element/: memory.py
smqtk_detection/interfaces/: __init__.py  detect_image_objects.py  detection_element.py  object_detector.py
smqtk_detection/utils/: bbox.py
tests/impls/: test_DetectionElementFactory.py
tests/impls/DetectionElement/: test_memory.py
tests/impls/detect_image_objects/: test_centernetvisdrone.py  test_mmdet_base.py  test_mmdet_implementation.py  test_resnet_frcnn.py
tests/interfaces/: test_interface.py  test_interface_ImageMatrixObjectDetector.py  test_interface_ObjectDetection.py
