[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "smqtk-detection"
version = "0.19.0"
description = "Algorithms, data structures and utilities around performing detection of inputs"
license = "BSD-3-Clause"
authors = ["Kitware, Inc. <smqtk-developers@kitware.com>"]
readme = "README.md"
repository = "https://github.com/Kitware/SMQTK-Detection"
documentation = ""
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Unix',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.6.2,<3.10"
smqtk-core = ">=0.18.0"
smqtk-classifier = ">=0.19.0"
smqtk-dataprovider = ">=0.16.0"
smqtk-image-io = ">=0.16.2"
torch = {version = "^1.10.0", optional = true}
torchvision = {version = "^0.11.1", optional = true}
opencv-python = {version = "~4.5.2.0", optional = true}
numba = {version = "~0.53.0", optional = true}

[tool.poetry.extras]
torch = [ "torch", "torchvision" ]
centernet = [ "torch", "opencv-python", "numba" ]

[tool.poetry.dev-dependencies]
#CI
flake8 = "^3.8.3"
flake8-mutable = "^1.2.0"
mypy = ">=0.790"
#Docs
Sphinx = "^3.2.1"
sphinx-rtd-theme = ">=0.5.0"
sphinx-argparse = ">=0.2.5"
sphinx-prompt = "^1.3.0"
livereload = "^2.6.3"
# Testing
coverage = "^6"
pytest = "^6"
pytest-cov = "^3"
requests = "^2.26.0"
types-requests = "^2.26.0"
# Development
ipython = "^7.16.3"

[tool.poetry.plugins."smqtk_plugins"]
# Detection Element
"smqtk_detection.impls.detection_element.memory" = "smqtk_detection.impls.detection_element.memory"
"smqtk_detection.impls.detect_image_objects.random_detector" = "smqtk_detection.impls.detect_image_objects.random_detector"
"smqtk_detection.impls.detect_image_objects.resnet_frcnn" = "smqtk_detection.impls.detect_image_objects.resnet_frcnn"
"smqtk_detection.impls.detect_image_objects.centernet" = "smqtk_detection.impls.detect_image_objects.centernet"

[tool.pytest.ini_options]
addopts = [
    "-lv",                          # Show local in trace-backs.
    "--doctest-modules",            # Increased verbosity.
    "--tb=long",                    # Trace-back print mode.
    "--cov=./smqtk_detection",      # Cover our package specifically
    "--cov=./tests",                # Also cover our tests for dead spots
    "--cov-report=term",            # Coverage report to terminal
    "--cov-report=xml:coverage.xml" # For external tool reporting
]
testpaths = [
    "tests",
    "smqtk_detection",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
