[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "smqtk-detection"
version = "0.19.0"
description = "Algorithms, data structures and utilities around performing detection of inputs"
license = "BSD-3-Clause"
authors = ["Kitware, Inc. <smqtk-developers@kitware.com>"]
readme = "README.md"
repository = "https://github.com/Kitware/SMQTK-Detection"
documentation = ""
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Unix',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10'
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
smqtk-core = ">=0.18.0"
smqtk-classifier = ">=0.19.0"
smqtk-dataprovider = ">=0.16.0"
smqtk-image-io = ">=0.16.2"
torch = {version = ">=1.10.0", optional = true}
torchvision = {version = ">=0.11.1", optional = true}
opencv-python = {version = ">=4.5.2.0", optional = true}
numba = [
    {version = "~0.56.4", optional = true, python = "<3.11" },
    {version = "~0.57.0", optional = true, python = ">=3.11" },
]

[tool.poetry.extras]
torch = [ "torch", "torchvision" ]
centernet = [ "torch", "opencv-python", "numba" ]

[tool.poetry.dev-dependencies]
#CI
flake8 = [
    # Hinge because 6.0 minimum supported python version is 3.8.1
    { version = ">=5", python = "<3.8.1" },
    { version = ">=6", python = ">=3.8.1" }
]
flake8-mutable = ">=1.2"
mypy = ">=0.991"
#Docs
Sphinx = [
    # Hinge because, while sphinx >=5.3 supports python <3.8.1, it requires an
    # importlib-metadata version higher than what flake8 ^5 supports, which is
    # the version of flake8 required for python version <3.8.1.
    { version = ">=4.3.2", python = "<3.8.1" },
    { version = ">=5.3", python = ">=3.8.1"}
]
sphinx-rtd-theme = ">=1.1.1"
sphinx-argparse = ">=0.4"
sphinx-prompt = ">=1.5"
livereload = ">=2.6.3"
# Testing
coverage = ">=6.5"
pytest = ">=7.2"
pytest-cov = ">=4"
requests = ">=2.26.0"
types-requests = ">=2.26.0"
# Development
ipython = [
    { version = ">=7", python = "<3.8" },
    { version = ">=8", python = ">=3.8" }
]

[tool.poetry.plugins."smqtk_plugins"]
# Detection Element
"smqtk_detection.impls.detection_element.memory" = "smqtk_detection.impls.detection_element.memory"
"smqtk_detection.impls.detect_image_objects.random_detector" = "smqtk_detection.impls.detect_image_objects.random_detector"
"smqtk_detection.impls.detect_image_objects.resnet_frcnn" = "smqtk_detection.impls.detect_image_objects.resnet_frcnn"
"smqtk_detection.impls.detect_image_objects.centernet" = "smqtk_detection.impls.detect_image_objects.centernet"

[tool.pytest.ini_options]
addopts = [
    "-lv",                          # Show local in trace-backs.
    "--doctest-modules",            # Increased verbosity.
    "--tb=long",                    # Trace-back print mode.
    "--cov=./smqtk_detection",      # Cover our package specifically
    "--cov=./tests",                # Also cover our tests for dead spots
    "--cov-report=term",            # Coverage report to terminal
    "--cov-report=xml:coverage.xml" # For external tool reporting
]
testpaths = [
    "tests",
    "smqtk_detection",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
